--- a/index.html
+++ b/index.html
@@ -231,12 +231,6 @@
         </div>
     </div>
     <div class="" id="cursor"></div>
-    <script>
-        let cursor = document.getElementById('cursor');
-        window.onmousemove = function(e) {
-            cursor.style.left = e.clientX + 'px';
-            cursor.style.top = e.clientY + 'px';
-        }
-    </script>
+    <script src="scripts/cursorScript.js"></script>
 </body>
 </html>
