--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
             <div class="hexagon"></div>
         </div>
     </div>
-    <div class="" id="cursor"></div>
+    <div id="cursor"></div>
     <script src="scripts/cursorScript.js"></script>
 </body>
 </html>
