--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hexagon CircleForm</title>
+    <title>Hexagon-CircleForm</title>
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="icon.jpg">
 </head>
